Enhance CMake configuration and documentation support. Added Clang tools for code formatting and static analysis, updated README.md with detailed setup instructions, and improved project structure. Modified MyClass to initialize member variables and updated main.cpp output format.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -34,6 +34,37 @@
                 "isDefault": true
             },
             "dependsOn": ["cmake configure"]
+        },
+        {
+            "label": "format code",
+            "type": "shell",
+            "command": "cmake",
+            "args": [
+                "--build",
+                "${workspaceFolder}/build",
+                "--target",
+                "format"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "group": "build"
+        },
+        {
+            "label": "lint code",
+            "type": "shell",
+            "command": "cmake",
+            "args": [
+                "--build",
+                "${workspaceFolder}/build",
+                "--target",
+                "lint"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "group": "build",
+            "dependsOn": ["cmake configure"]
         }
     ]
 }
