--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,53 +16,25 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules" ${CMAKE_MODULE_PATH})
 
-# Collect source files
-file(GLOB_RECURSE SOURCES "src/*.cpp")
-file(GLOB_RECURSE ALL_SOURCE_FILES 
-    ${PROJECT_SOURCE_DIR}/src/*.cpp
-    ${PROJECT_SOURCE_DIR}/include/*.hpp
-)
-
-# Main target
-add_executable(${PROJECT_NAME} ${SOURCES})
-target_include_directories(${PROJECT_NAME} PUBLIC
-    ${CMAKE_SOURCE_DIR}/include
-)
-target_link_libraries(${PROJECT_NAME} PRIVATE MPI::MPI_CXX)
-target_compile_definitions(${PROJECT_NAME} PRIVATE USE_MPI)
-
-# Tests
-add_executable(unit_tests
-    tests/test_parallel.cpp
-    src/ParallelBase.cpp
-)
-
-target_include_directories(unit_tests PRIVATE
-    ${CMAKE_SOURCE_DIR}/include
-    ${MPI_CXX_INCLUDE_DIRS}
-)
-
-target_link_libraries(unit_tests PRIVATE
-    GTest::GTest
-    GTest::Main
-    MPI::MPI_CXX
-)
-
-target_compile_definitions(unit_tests PRIVATE USE_MPI)
-
-include(GoogleTest)
-gtest_discover_tests(unit_tests)
-
-# After basic settings
 # Code quality tools
 find_package(ClangTidy)
 find_program(CLANG_FORMAT "clang-format" 
-    PATHS
-        "C:/msys64/mingw64/bin"
+    PATHS "C:/msys64/mingw64/bin"
 )
 
-# Clang Format
+# Add subdirectories
+add_subdirectory(src)
+add_subdirectory(include)
+add_subdirectory(tests)
+
+# Add after subdirectories
 if(CLANG_FORMAT)
+    file(GLOB_RECURSE ALL_SOURCE_FILES 
+        ${PROJECT_SOURCE_DIR}/src/*.cpp
+        ${PROJECT_SOURCE_DIR}/include/*.hpp
+        ${PROJECT_SOURCE_DIR}/tests/*.cpp
+    )
+
     add_custom_target(format
         COMMAND ${CLANG_FORMAT} -i ${ALL_SOURCE_FILES}
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
@@ -70,7 +42,6 @@ if(CLANG_FORMAT)
     )
 endif()
 
-# Clang Tidy
 if(ClangTidy_FOUND)
     set(CMAKE_CXX_CLANG_TIDY ${CLANG_TIDY_EXECUTABLE})
     
@@ -78,6 +49,7 @@ if(ClangTidy_FOUND)
         COMMAND ${CLANG_TIDY_EXECUTABLE}
         ${CMAKE_SOURCE_DIR}/src/*.cpp
         ${CMAKE_SOURCE_DIR}/include/*.hpp
+        ${CMAKE_SOURCE_DIR}/tests/*.cpp
         --config-file=${CMAKE_SOURCE_DIR}/.clang-tidy
         --checks=*
         -p=${CMAKE_BINARY_DIR}
@@ -96,6 +68,7 @@ if(ClangTidy_FOUND)
         COMMAND ${CLANG_TIDY_EXECUTABLE}
         ${CMAKE_SOURCE_DIR}/src/*.cpp
         ${CMAKE_SOURCE_DIR}/include/*.hpp
+        ${CMAKE_SOURCE_DIR}/tests/*.cpp
         --config-file=${CMAKE_SOURCE_DIR}/.clang-tidy
         --checks=*
         -p=${CMAKE_BINARY_DIR}
