Refactor CMake configuration to conditionally include documentation and testing support. Added options for building documentation and tests, updated Doxygen and Sphinx configurations, and improved the structure of the CMakeLists.txt file. Enhanced API documentation formatting and adjusted Breathe configuration for better integration with Doxygen output.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,38 @@
 cmake_minimum_required(VERSION 3.15)
 project(metada VERSION 1.0)
 
+# Move this before any find_package calls
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules" ${CMAKE_MODULE_PATH})
+
+# Add options near the top after project()
+option(BUILD_DOCS "Build documentation" OFF)
+option(BUILD_TESTS "Build tests" OFF)
+
 # Find required packages first
 find_package(MPI REQUIRED)
-find_package(GTest REQUIRED)
 
-# Add testing support
-include(CTest)
-enable_testing()
+# Only find GTest if tests are enabled
+if(BUILD_TESTS)
+    find_package(GTest REQUIRED)
+endif()
+
+# Only find documentation tools if docs are enabled
+if(BUILD_DOCS)
+    find_package(Doxygen REQUIRED)
+    find_package(Sphinx)
+endif()
+
+# Add testing support only if tests are enabled
+if(BUILD_TESTS)
+    include(CTest)
+    enable_testing()
+endif()
 
 # Basic settings
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules" ${CMAKE_MODULE_PATH})
 
 # Code quality tools
 find_package(ClangTidy)
@@ -25,7 +43,16 @@ find_program(CLANG_FORMAT "clang-format"
 # Add subdirectories
 add_subdirectory(src)
 add_subdirectory(include)
-add_subdirectory(tests)
+
+# Add tests conditionally
+if(BUILD_TESTS)
+    add_subdirectory(tests)
+endif()
+
+# Add docs conditionally
+if(BUILD_DOCS)
+    add_subdirectory(docs)
+endif()
 
 # Add after subdirectories
 if(CLANG_FORMAT)
