--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -1,19 +1,15 @@
-PROJECT_NAME           = @PROJECT_NAME@
-PROJECT_NUMBER        = @PROJECT_VERSION@
-OUTPUT_DIRECTORY      = @CMAKE_CURRENT_BINARY_DIR@/docs/doxygen
+PROJECT_NAME           = "@PROJECT_NAME@"
+PROJECT_NUMBER        = "@PROJECT_VERSION@"
+STRIP_FROM_PATH       = @CMAKE_SOURCE_DIR@
+INPUT                 = @CMAKE_SOURCE_DIR@/src \
+                       @CMAKE_SOURCE_DIR@/include
+FILE_PATTERNS         = *.cpp *.hpp
+RECURSIVE             = YES
+OUTPUT_DIRECTORY      = @DOXYGEN_OUTPUT_DIR@
 GENERATE_HTML         = YES
+GENERATE_LATEX        = NO
 GENERATE_XML          = YES
-XML_OUTPUT           = @CMAKE_CURRENT_BINARY_DIR@/docs/xml
-INPUT                = @CMAKE_CURRENT_SOURCE_DIR@/src @CMAKE_CURRENT_SOURCE_DIR@/include
-RECURSIVE            = YES
-EXTRACT_ALL          = YES
-EXTRACT_PRIVATE      = YES
-EXTRACT_STATIC       = YES
-EXTRACT_ANON_NSPACES = YES
-FILE_PATTERNS        = *.cpp *.hpp
-GENERATE_LATEX       = NO
-HAVE_DOT             = NO
-SHOW_INCLUDE_FILES   = YES
-SHOW_NAMESPACES      = YES
-SHOW_FILES           = YES
-SHOW_USED_FILES      = YES
+XML_OUTPUT            = xml
+EXTRACT_ALL           = YES
+EXTRACT_PRIVATE       = YES
+EXTRACT_STATIC        = YES
