Refactor CMake configuration to improve code quality tooling and documentation support. Introduced a new module for code quality targets, including Clang Format and Clang Tidy, and updated documentation build options for Doxygen and Sphinx. Enhanced the structure of CMakeLists.txt for better modularity and maintainability.

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,3 +1,12 @@
+if(BUILD_DOCS)
+    # Doxygen is required
+    find_package(Doxygen REQUIRED)
+    
+    # Sphinx is optional
+    find_package(Sphinx)
+    option(BUILD_SPHINX "Build Sphinx documentation" ${Sphinx_FOUND})
+endif()
+
 if(DOXYGEN_FOUND)
     # Set Doxygen input and output paths
     set(DOXYGEN_INPUT_DIR ${CMAKE_SOURCE_DIR})
