Integrate Glog logging library into the project. Updated CMakeLists.txt to find and link Glog as a required dependency. Modified main.cpp to initialize Glog and replace standard output with Glog logging for better error handling and result display. Updated unit tests to include Glog for consistent logging practices.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ register_package(
     REQUIRED TRUE
 )
 
+find_package(Glog REQUIRED)
+
 # Optional packages based on build options
 if(BUILD_TESTS)
     find_package(GTest REQUIRED)
