Enhance CMake configuration to add custom MPI test for unit_tests. Introduced a new test named 'parallel_tests' that executes with 4 processes using MPI, improving testing capabilities for parallel functionalities.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,5 +12,12 @@ target_link_libraries(unit_tests PRIVATE
 
 target_compile_definitions(unit_tests PRIVATE USE_MPI)
 
-include(GoogleTest)
-gtest_discover_tests(unit_tests) 
+# Add a custom test that runs with MPI
+add_test(
+    NAME parallel_ests
+    COMMAND ${MPIEXEC_EXECUTABLE} 
+            ${MPIEXEC_NUMPROC_FLAG} 4 
+            ${MPIEXEC_PREFLAGS}
+            $<TARGET_FILE:unit_tests>
+            ${MPIEXEC_POSTFLAGS}
+) 
