Fix test name in CMakeLists.txt and refactor TEST_DATA in test_parallel.cpp. Changed the test name from 'parallel_ests' to 'parallel_tests' for clarity. Updated TEST_DATA from a raw array to a std::array for improved type safety and consistency in size calculations.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,7 +14,7 @@ target_compile_definitions(unit_tests PRIVATE USE_MPI)
 
 # Add a custom test that runs with MPI
 add_test(
-    NAME parallel_ests
+    NAME parallel_tests
     COMMAND ${MPIEXEC_EXECUTABLE} 
             ${MPIEXEC_NUMPROC_FLAG} 4 
             ${MPIEXEC_PREFLAGS}
