Update .clang-tidy and CMakeLists.txt for improved code quality checks and dependency management. Adjusted .clang-tidy to refine checks, maintaining focus on bugprone issues. Modified CMakeLists.txt to ensure correct case for Glog package, enhancing consistency in dependency handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ option(BUILD_TESTS "Build tests" OFF)
 
 # Find required packages
 find_package(MPI REQUIRED)
-find_package(Glog REQUIRED)
+find_package(glog REQUIRED)
 
 # Optional packages based on build options
 if(BUILD_TESTS)
